--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
 	<artifactId>TPX-Proj</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>TPX-Proj</name>
-	<description>TechPointX Project Nonprofits 03</description>
+	<description>TPX Project Nonprofits 03</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
@@ -24,6 +24,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
